--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             
             <ul class="broker-list">
                 <li>
-                    <h3>AlphaTrade</h3>
+                    <h3><a href="https://www.its2010.org/ig">IG</a></h3>
                     <p><strong>Bonus:</strong> 100% bis zu 500€ bei Ersteinzahlung</p>
                     <p><strong>Regulierung:</strong> FCA (UK), BaFin (Deutschland)</p>
                     <p><strong>Spreads:</strong> Ab 0.6 Pips für EUR/USD, variable Spreads</p>
@@ -458,7 +458,7 @@
                     <p><strong>ITS2010-Bewertung:</strong> 4.8/5 Sterne - Hervorragende Gesamtleistung mit Schwerpunkt auf schneller Ausführung und stabiler Plattform</p>
                 </li>
                 <li>
-                    <h3>FX-Innovate</h3>
+                    <h3><a href="https://www.its2010.org/plus500">Plus500</a></h3>
                     <p><strong>Bonus:</strong> 75€ ohne Einzahlung + 50% Einzahlungsbonus</p>
                     <p><strong>Regulierung:</strong> CySEC (Zypern), FSCA (Südafrika)</p>
                     <p><strong>Spreads:</strong> Ab 0.8 Pips für EUR/USD, feste Spreads verfügbar</p>
@@ -475,7 +475,7 @@
                     <p><strong>ITS2010-Bewertung:</strong> 4.6/5 Sterne - Ausgezeichnete Option für Einsteiger und erfahrene Trader mit vielseitigen Handelsoptionen</p>
                 </li>
                 <li>
-                    <h3>CryptoEdge</h3>
+                    <h3><a href="https://www.its2010.org/binance">Binance</a></h3>
                     <p><strong>Bonus:</strong> 200 USDT bei Kontoeröffnung + 75% Einzahlungsbonus</p>
                     <p><strong>Regulierung:</strong> VFSC (Vanuatu), Mitglied der Financial Commission</p>
                     <p><strong>Gebühren:</strong> 0.1% pro Trade für Krypto-Spots, 0.05% für Futures</p>
@@ -497,9 +497,9 @@
             <table>
                 <tr>
                     <th>Kriterium</th>
-                    <th>AlphaTrade</th>
-                    <th>FX-Innovate</th>
-                    <th>CryptoEdge</th>
+                    <th>IG</th>
+                    <th>Plus500</th>
+                    <th>Binance</th>
                 </tr>
                 <tr>
                     <td>Regulierung</td>
