--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             
             <div class="group-box">
                 <h3>Krypto Momentum Gruppe</h3>
-                <p>In der schnelllebigen Welt der Kryptowährungen ist Geschwindigkeit entscheidend. Unser Krypto Momentum KI-Bot wurde entwickelt, um die einzigartigen Charakteristika der Kryptomärkte zu nutzen, einschließlich ihrer 24/7-Handelsnatur, extremen Volatilität und schnellen Trendentwicklung. Der Bot fokussiert sich auf Bitcoin, Ethereum und weitere 20 sorgfältig ausgewählte Altcoins mit hoher Liquidität.</p>
+                <p>In der schnelllebigen Welt der Kryptowährungen ist Geschwindigkeit entscheidend. Unser <a href="https://www.tradinggruppe.de/">Krypto Momentum KI-Bot</a> wurde entwickelt, um die einzigartigen Charakteristika der Kryptomärkte zu nutzen, einschließlich ihrer 24/7-Handelsnatur, extremen Volatilität und schnellen Trendentwicklung. Der Bot fokussiert sich auf Bitcoin, Ethereum und weitere 20 sorgfältig ausgewählte Altcoins mit hoher Liquidität.</p>
                 
                 <p><strong>Bot-Spezifikationen:</strong></p>
                 <ul>
