--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
         <img src="0eafa39b-e9fe-4c35-8704-87aefbf03a7d.png" alt="ITS2010 Logo">
     </a>
     <div class="header-content">
-        <h1>ITS2010: Intelligente Trading Strategien</h1>
+        <h1>ITS2010: Erfolgreiche Trading Strategien</h1>
         <p class="tagline">Broker-Boni & KI-gestützte Trading-Gruppen</p>
     </div>
 </header>
