--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="1afffe8f-faa2-4978-ba7e-84bfe98d10d3.png">
-    <title>ITS2010: Intelligente Trading Strategien | Broker-Boni & KI-gestützte Trading-Gruppen</title>
+    <title>ITS2010: Erfolgreiche Trading Strategien | Broker-Boni & KI-gestützte Trading-Gruppen</title>
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -249,7 +249,7 @@
             <img src="0eafa39b-e9fe-4c35-8704-87aefbf03a7d.png" alt="ITS2010 Logo">
         </a>
         <div class="header-content">
-            <h1>ITS2010: Intelligente Trading Strategien</h1>
+            <h1>ITS2010: Erfolgreiche Trading Strategien</h1>
             <p class="tagline">Broker-Boni & KI-gestützte Trading-Gruppen</p>
         </div>
     </header>
